# old_mixer_repo

./: .bazelrc  .gitignore  .travis.yml  BUILD  BUILD.api  BUILD.centos  BUILD.debian  BUILD.goimports  CMakeLists.txt  CONTRIBUTING.md  Jenkinsfile  Makefile  OWNERS  README.md  WORKSPACE  adapter_author_deps.bzl  check_bazel_version.bzl  check_bazel_version_test.py  facts.go  istio.deps  istio_api.bzl  logs.go  proto_deps.bzl  repositories.bzl
adapter/: BUILD  inventory.bzl  inventory.go  inventory2.gen.go
adapters/: BUILD  builder_test.go  logger.go  metricsReporter.go
aspect/: BUILD  types.go
config/: listCheckerConfig.go
docker/: BUILD  cacerts.bzl  cloudbuild.yaml  extract.sh  gcloud_build.sh  gcloud_push.sh  travis_gcloud.sh
prow/: mixer-coverage.sh  mixer-e2e-smoketest.sh  mixer-postsubmit.sh  mixer-presubmit.sh
server/: adapterManager.go  apiHandlers.go  configManager.go  main.go
template/: BUILD  generateTemplateGenGo.sh  template.gen.go
test/: BUILD  BUILD.bazel  handler.go  repositories.bzl  server.go  server_test.go  stub.go  stub_test.go
test/e2e/: BUILD  e2e_configuration_test.go  e2e_report_test.go  spyadapter.go  teststate.go  util.go
test/e2e/advance/: BUILD  common.go  e2e_report_test.go  report_test.go
test/e2e/advance/spyAdapter/: BUILD
test/e2e/advance/template/: BUILD
test/e2e/advance/template/report/: BUILD
test/e2e/builtin/: BUILD  attrs.yaml  common.go  handlers.yaml  report_test.go  rules.yaml
test/e2e/builtintemplate/: BUILD  e2e_report_test.go
test/e2e/builtintemplate/spyAdapter/: BUILD
test/e2e/spyAdapter/: BUILD  spyadapter.go
test/e2e/template/: BUILD  generateTemplateGenGo.sh  template.gen.go
test/e2e/template/report/: reporttmpl.proto  tmpl.proto
test/spyAdapter/: BUILD  spyadapter.go
test/testenv/: BUILD  testenv.go  testenv_test.go
(+845 files in other folders)
